src/objects/ExceptionLog__c.object
<CustomObject>
    <description>To track all exceptions occuring</description>
    <fields>
        <fullName>ApexTrigger__c</fullName>
        <label>Apex Trigger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContextUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ExceptionLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedToDefect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate if exception is converted to defect.</description>
        <label>Converted To Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <label>Exception Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionDescription__c</fullName>
        <label>Exception Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionDetails__c</fullName>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionLogTimestamp__c</fullName>
        <label>ExceptionLog Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfTimesOccured__c</fullName>
        <label>Number of Times Occured</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSCallingApplication__c</fullName>
        <label>WS CallingApplication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSCallingArea__c</fullName>
        <label>WS CallingArea</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSTransactionID__c</fullName>
        <label>WS TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHandled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To define whether the Exception logged is a Handled Exception or Unhandled Exception.</description>
        <label>Is Handled</label>
        <type>Checkbox</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>ExceptionDescription__c</columns>
        <columns>ConvertedToDefect__c</columns>
        <columns>isHandled__c</columns>
        <columns>NumberOfTimesOccured__c</columns>
        <columns>Severity__c</columns>
        <columns>OrgId__c</columns>
        <columns>ExceptionLogTimestamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EXCP - {0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>